--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "flowbite-react": "^0.10.2",
-    "next": "15.1.6",
+    "next": "^15.2.4",
     "react": "^19.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0"
