--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@next/env": "^15.1.7",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "cloudinary": "^2.6.0",
     "flowbite-react": "^0.10.2",
     "next": "^15.2.4",
+    "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
