--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "recharts": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
