--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.1",
+    "@mui/x-charts": "^8.10.0",
     "@next/env": "^15.1.7",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
@@ -20,8 +24,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-redux": "^9.2.0",
-    "recharts": "^3.1.0"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
