--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "cloudinary": "^2.6.0",
+    "dayjs": "^1.11.19",
     "flowbite-react": "^0.10.2",
     "next": "^15.2.4",
     "next-cloudinary": "^6.16.0",
