--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "axios": "^1.7.9",
     "cloudinary": "^2.6.0",
     "dayjs": "^1.11.19",
+    "eslint-config-next": "^16.0.10",
     "flowbite-react": "^0.10.2",
-    "next": "^15.2.4",
+    "next": "^16.0.10",
     "next-cloudinary": "^6.16.0",
-    "react": "^19.0.0",
+    "react": "^19.2.3",
     "react-color": "^2.19.3",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0"
   },
